# NaviDOM

./: .gitignore  README.md  README_ZH.md  demo.py  dom_utils.py  env.example.json  globus_util.py  llm.py  main.py  main2.py  mind2web.py  mind2web2.py  pyproject.toml  test.py  test_locate.py  test_view_string.py
agent/: action.py  agent.py  config.py  dom.py  dom_utils.py  llm.py  pruning.py  record.py  run.py  tab.py  utils.py
agent/prompts/: act.md  extract.md  feedback.md  observation.md  planning.md  refinement.md
agent/scripts/: cssSelectorGenerator.js  loadDomState.js
dataset/mind2web/: evaluation.py  globus_util.py  preparation.py
