[project]
name = "ui-distiller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json-repair>=0.54.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "openai>=2.14.0",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "scipy>=1.17.1",
]
